# limipedia.scraper

./: .gitignore  LICENSE  README.md  gen_timestamp.py  pyproject.toml  rye-env
.github/workflows/: release.yml
databases/: abilities.json  defgears.json  furniture.json  monsters.json  weapons.json
pages/defgears/: .gitignore  1113713.html  1113714.html  1113715.html  1113716.html  1113717.html  1113718.html  1113719.html  1113720.html  1113733.html  1113734.html  1113735.html  1113736.html  1113737.html  1113738.html  1113739.html  1113740.html  1203101.html  1203102.html  1203103.html  1203104.html  1203105.html  1203106.html  1203107.html  1203108.html  1720901.html  1720902.html  1720903.html  1720904.html  1916123.html  1916124.html  1916125.html  1916126.html  1916127.html  1916128.html  1916129.html  1984902.html  2211001.html  2211002.html  2211003.html  (+5685 more)
pages/monsters/: .gitignore  1113741.html  1113742.html  1113743.html  1113744.html  1916101.html  1916102.html  1916103.html  1916104.html  1916105.html  1916106.html  1916107.html  1916108.html  1916109.html  1916110.html  4014801.html  4015801.html  4411001.html  4411002.html  4411003.html  4411004.html  4411005.html  4412001.html  4412002.html  4412003.html  4412004.html  4412005.html  4412801.html  4412802.html  4412901.html  4412902.html  4413001.html  4413002.html  4413003.html  4413004.html  4413005.html  4413006.html  4413007.html  4413008.html  4413010.html  (+3692 more)
pages/weapons/: .gitignore  100-Year Lantern-1103002.html  1011001.html  (+8571 more)
releases/: abilities.json  furnitures.json  monsters.json
(+9 files in other folders)
