[project]
name = "limipedia"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "aundrebryan123", email = "aundrebryan123@gmail.com" }
]
dependencies = [
    "tinydb>=4.8.2",
    "httpx>=0.28.1",
    "bs4>=0.0.2",
    "lxml>=5.3.0",
    "betterjsonstorage>=1.3.2",
    "tinydb-smartcache>=2.0.0",
    "black>=24.10.0",
    "requests>=2.32.3",
    "semver>=3.0.2",
    "minify-html-onepass>=0.15.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/limipedia"]

[project.scripts]
scrape = "limipedia.scraper:main"
query = "limipedia.scraper.query:main"
scratch = "limipedia.scraper.scratch:main"
update_db = "limipedia.scraper.database:init_database"
cache = "limipedia.cacher:main"
